attempted to fix the vertical align of the text in the header

--- a/css/main.css
+++ b/css/main.css
@@ -78,23 +78,24 @@ body{
 
 header{
 	position: fixed;
-	top:0px;
+	top: 0px;
 	width: 100%;
 	background-color: #fff;
 	text-align: center;
-	height: 50px;
+	height: auto;
 	z-index: 10;
 	border-bottom: solid;
 	border-color: #ddd;
 	border-width: 1px;
 	font-weight: 100;
+	background-color: blue;
 }
 
 nav{
+	position: relative;
 	display: inline-block;
-	line-height: 0px;
-	vertical-align: middle;
 	width: 100%;
+	bottom: 5px;
 }
 
 /*this is for the web section*/
@@ -197,7 +198,7 @@ h3{
 	position: fixed;	
 	top:51px;
 	width: 100%;
-	height: 50px;
+	height: auto;
 	text-align: center;
 	background: #fff;
 	z-index:10;
@@ -208,9 +209,9 @@ h3{
 }
 
 #photolinks ul li{
+	position: relative;
 	display: inline-block;
-	line-height: 0px;
-	vertical-align: middle;
+	bottom: 10px;
 }
 /*this ends the section for specific photo projects*/
  
